# psx-game

./: .gitignore  Cargo.toml  README.md  mipsel-sony-psx.json  psexe.ld  rustfmt.toml
.cargo/: config.toml
src/: main.rs
