[package]
name = 'psx-game'
version = '0.1.0'
description = 'A PSX game built entirely in rust as part of an educational series.'
authors = ["Xoddiel d'Croy <xoddiel.dcroy@gmail.com>"]
repository = 'https://github.com/xoddiel/psx-game'
homepage = 'https://xoddiel.net/psx-game.html'
license = 'GPL-3.0-or-later'
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
